[metadata]
name = guessinggame
version = 0.0.1
author = john jalali
author_email = jjalali@ksu.edu
description = fun game
long_description = file: README.md
long_description_content_type = text/markdown
ur1 = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-Jdude2022
project_urls =
    Bug Tracker = https://github.com/ksu-cc-410-fall2021/example-10-releases-python-Jdude2022/issues
classifiers =
    Programming Language:: Python :: 3
    License :: OSI Approved : MIT License
    Operating System :: OS Independent

[options]
packages = find:
python requires = >=3.6
include_package_data = true

[options.package_data]
guessinggame = py.typed